Fix image spacing issue

--- a/src/stylesheets/_article.scss
+++ b/src/stylesheets/_article.scss
@@ -33,7 +33,7 @@
         width: 100%;
         max-width: 100%;
         height: auto;
-        display: block;
+        vertical-align: middle;
     }
 
     figcaption {
