--- a/src/stylesheets/_card-teaser.scss
+++ b/src/stylesheets/_card-teaser.scss
@@ -54,12 +54,12 @@
     background: $color-primary;
 
     img {
-        display: block;
         height: auto;
         max-width: 100%;
         width: 100%;
         transition: opacity $transition-time ease;
         backface-visibility: hidden;
+        vertical-align: middle;
 
         .card-teaser__content:focus &,
         .card-teaser__content:hover & {
