--- a/src/stylesheets/_featured-post.scss
+++ b/src/stylesheets/_featured-post.scss
@@ -24,13 +24,13 @@
         background: $color-primary;
 
         img {
-            display: block;
             width: 100%;
             max-height: 100%;
             height: auto;
             box-sizing: border-box;
             transition: opacity $transition-time ease;
             backface-visibility: hidden;
+            vertical-align: middle;
 
             .featured-post__content:focus &,
             .featured-post__content:hover & {
