--- a/src/stylesheets/_site-footer.scss
+++ b/src/stylesheets/_site-footer.scss
@@ -25,7 +25,7 @@
         width: percentage(190/1004);
 
         img {
-            display: block;
+            vertical-align: middle;
             max-width: 100%;
             width: 100%;
         }
@@ -36,7 +36,7 @@
         vertical-align: middle;
 
         img {
-            display: block;
+            vertical-align: middle;
         }
     }
 
