--- a/src/stylesheets/_site-header.scss
+++ b/src/stylesheets/_site-header.scss
@@ -36,7 +36,7 @@
     vertical-align: middle;
 
     img {
-        display: block;
+        vertical-align: middle;
     }
 }
 
@@ -64,7 +64,7 @@
         }
 
         img {
-            display: block;
+            vertical-align: middle;
             max-width: 100%;
             width: 100%;
         }
