--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -62,7 +62,7 @@ $font-size-base: 16px;
 $line-height-base: 20px;
 
 
-$image-path: '../images/';
+$image-path: '';
 
 
 
