--- a/src/stylesheets/generic/_dewnrgr.scss
+++ b/src/stylesheets/generic/_dewnrgr.scss
@@ -6,7 +6,7 @@
  * DEWNR's own customised version of Frutiger
  */
 
-$path-fonts: '../fonts/' !default;
+$path-fonts: '' !default;
 
 
 
